@@ -35,6 +35,8 @@ Release 0.20.4 - Unreleased
                (dhruba borthakur via Stack)
    HBASE-2308  Fix the bin/rename_table.rb script, make it work again
    HBASE-2307  hbase-2295 changed hregion size, testheapsize broke... fix it
+   HBASE-2269  PerformanceEvaluation "--nomapred" may assign duplicate random
+               seed over multiple testing threads (Tatsuya Kawano via Stack)
 
   IMPROVEMENTS
    HBASE-2180  Bad read performance from synchronizing hfile.fddatainputstream
